# homelabme

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: main.rs
src/application/: dto.rs  mod.rs  network_dto.rs  network_use_cases.rs  use_cases.rs
src/domain/: entities.rs  mod.rs  network_entities.rs  network_repositories.rs  network_services.rs  repositories.rs  services.rs
src/infrastructure/: mod.rs  network_repositories.rs  repositories.rs  web.rs
